# hatsu_ino

./: .gitignore  CLAUDE.md  CONFIG.TXT  README.md  hatsu_ino.ino  utils.h
.claude/: settings.json
.github/workflows/: arduino-build.yml  cppcheck.yml  native-tests.yml  pages.yml
boards/v0/: CONFIG.TXT  README.md
boards/v0/hatsu_v0/: hatsu_v0.ino  logic.h
boards/v0/test/native/: CMakeLists.txt
docs/: _config.yml  index.md
docs/boards/: index.md
test/native/: CMakeLists.txt  test_logic.cpp  test_utils.cpp
test/test_hatsu_ino/: test_hatsu_ino.ino
